# Sparse-Expansion

./: .gitignore  LICENSE  README.md  llama.py  llama_finetune.py  main.py  pyproject.toml  pythia.py  requirements.txt  setup.py
Sparse_Expansion.egg-info/: PKG-INFO  SOURCES.txt
tests/: parsing_test.py
utils/: PCAutils.py  clusteringutils.py  datautils.py  modelutils.py  parser.py  quant.py  sparsegpt.py  sparsegpt_backup.py
~/.cache/models--EleutherAI--pythia-12B-deduped/refs/: step143000
